<resources>
    <string name="app_name">Mis Lugares</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="pista_nombre">Nombre que identifique el lugar</string>
    <string name="tipo">Tipo:</string>
    <string name="Direccion">Dirección</string>
    <string name="Telefono">Telefono</string>
    <string name="URL">Página Web</string>
    <string name="comentario">Comentario</string>
    <string name="MisLugares">Mis Lugares</string>
    <string name="Mostrar">Mostrar</string>
    <string name="Preferencias">Preferencias</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Salir">Salir</string>
</resources>
